--- a/data/slide1.css
+++ b/data/slide1.css
@@ -1,1 +1,1 @@
-#spr1_475442f {clip:rect(0px,1280px,720px,0px);}#txt0_475442f,#txt1_475442f {font-family:fnt4; font-size:58.667px; line-height:83px; color:#843c0c;}#txt2_475442f {font-family:fnt5; font-size:37.333px; line-height:54px; font-weight:bold; color:#ed7d31;}
+#spr1_591872e {clip:rect(0px,1280px,720px,0px);}#txt0_591872e,#txt1_591872e {font-family:fnt4; font-size:58.667px; line-height:83px; color:#843c0c;}#txt2_591872e {font-family:fnt5; font-size:37.333px; line-height:54px; font-weight:bold; color:#ed7d31;}
